[package]
name = "reqwest-jwk"
version = "0.1.0"
edition = "2018"
description = "Use `reqwest` to fetch and cache JSON Web Key responses and provide verification capabilities with the `jwt` crate."

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

[dependencies]
async-lock = "2.4"
headers = "0.3.4"
reqwest = { version = "0.11.4", features = ["json"] }
jwt = { version = "0.14.0", features = ["openssl"] }
serde = { version = "1", features = ["derive"] }
openssl = "0.10"
base64 = "0.13.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
